fix: add contrast to modal controls
Modal controls are not visible on light images

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -32,6 +32,7 @@
     color:white;
     border: none;
     background: none;
+    text-shadow: 0 0 1px black;
 }
 
 .modal-content .close {
